fix: add letter-spacing variable

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -12,6 +12,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
+  letter-spacing: var(--letter-spacing);
 }
 
 h1::first-letter,
@@ -26,6 +27,7 @@ h6::first-letter {
 a {
   color: inherit;
   text-decoration: none;
+  letter-spacing: var(--letter-spacing);
 }
 
 a:hover {
@@ -35,6 +37,12 @@ a:hover {
 p {
   padding: 0;
   margin: 0;
+
+  letter-spacing: var(--letter-spacing);
+}
+
+span {
+  letter-spacing: var(--letter-spacing);
 }
 
 img {
@@ -136,8 +144,8 @@ section {
   backdrop-filter: blur(30px);
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.swiper-controls .swiper-button-prev,
+.swiper-controls .swiper-button-next {
   position: static;
   margin-top: 0;
   color: white;
